# CNN-Transformer

./: .gitignore  README.md  pyproject.toml
notebooks/: cicids2018 (2).ipynb  kaggle_cicids2018_full.ipynb  kaggle_cnn_transformer_only.ipynb  test_2018_with_2017_model.ipynb
scripts/: run_shap.py  train.py
src/cnn_transformer_only/: __init__.py  config.py  data.py
src/cnn_transformer_only/interpretability/: __init__.py  grad_cam.py  integrated_gradients.py  shap_runner.py
src/cnn_transformer_only/models/: __init__.py  cnn_classifier.py  cnn_transformer.py
src/cnn_transformer_only/training/: __init__.py  cnn_only_trainer.py  cnn_trainer.py
src/cnn_transformer_only/utils/: __init__.py  device.py
